# hiro-llm

./: .dockerignore  .gitignore  Dockerfile  E2E_VALIDATION.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/scripts/: discord_notify.py
.github/workflows/: discord-notifications.yml  python-ci.yml  typst.yml
configs/: embed768_shakespeare.yaml  embed768_smoltalk.yaml  embed768_tinystories.yaml  hidden3072_shakespeare.yaml  hidden3072_smoltalk.yaml  hidden3072_tinystories.yaml  instruction_tuning.yaml  layers12_shakespeare.yaml  layers12_smoltalk.yaml  layers12_tinystories.yaml  pretrain.yaml  shakespeare_pretrain.yaml  smoltalk_sft.yaml  tinystories_adaptation.yaml  vision_instruction_tuning.yaml  vision_pretrain.yaml
data/: README.md
data/raw/: sample.ppm  sample_instructions.jsonl  sample_text.txt  sample_vision.jsonl
docs/: book-plan.md  editorial-review.md  main.typ  template.typ
src/hiro_llm/: __init__.py  cli.py  config.py  evaluation.py
src/hiro_llm/data/: __init__.py  sources.py  text.py  vision.py
src/hiro_llm/inference/: __init__.py  text.py  vision.py
src/hiro_llm/model/: __init__.py  attention.py  language_model.py  transformer.py  vision_language_model.py
src/hiro_llm/training/: __init__.py  checkpoint.py  logging.py  scheduler.py  trainer.py
tests/: test_config.py  test_data.py  test_discord_notify.py  test_hub.py  test_model.py  test_training.py  test_variants.py
